Fix event text spacing

--- a/src/components/event-item/event-item.css
+++ b/src/components/event-item/event-item.css
@@ -12,7 +12,8 @@
 }
 
 .event-item__text {
-
+  font-size: .9em;
+  line-height: 1.5em;
 }
 
 .event-item__photos {
